Fixed: Project dropdown menu changes position when project name is too long.

--- a/src/main/resources/static/asset/css/style.css
+++ b/src/main/resources/static/asset/css/style.css
@@ -6331,6 +6331,20 @@ ul li a:focus {
   }
 }
 
+@media (max-width: 766px) {
+    .navbar-top-links li {
+        display: block !important;
+    }
+    ul {
+        width: 250px !important;
+    }
+
+    .navbar-top-links li:last-child{
+
+        margin-right:0px !important;
+    }
+}
+
 
 
 @media (min-width : 992px) {
